--- a/src/pages/minimedia.astro
+++ b/src/pages/minimedia.astro
@@ -16,7 +16,7 @@ import MiniMedia from "../../public/img/minimedia.png";
 
                 <div class="">
                     <img src={MiniMedia.src} class="w-project mt-10" alt="" transition:name="minimedia">
-                    <p class="font-raleway text-white mt-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    <p class="font-raleway text-white mt-5">MiniMedia is a Social Media app that offers a modern and clean UI, smooth animations and a client side login and user system. Made with React, CSS and Framer motion.</p>
                     <div class="flex gap-5">
                         <a href="https://github.com/Zabzx/Mini-Archive" target="_blank">
                         <button class="bg-fadedWhite p-3 rounded-md border-white border-4 text-white mt-5">Source Code</button>
