new spiceup github link

--- a/src/pages/spiceup.astro
+++ b/src/pages/spiceup.astro
@@ -18,7 +18,7 @@ import SpiceUp from "../../public/img/spiceup.png";
                     <img src={SpiceUp.src} class="w-project mt-10" alt="" transition:name="spiceup">
                     <p class="font-raleway text-white mt-5">SpiceUp! is an international food app that allows users to discover and learn to prepare dishes from all over the world. communicating with a REST API, this app offers a user friendly UX that allows users to quickly navigate their saved dishes for ease of access.</p>
                     <div class="flex gap-5">
-                        <a href="https://github.com/Zabzx/spiceUp-v2/tree/main" target="_blank">
+                        <a href="https://github.com/Zabzx/spiceUp" target="_blank">
                         <button class="bg-fadedWhite p-3 rounded-md border-white border-4 text-white mt-5">Source Code</button>
                         </a>
 
